2007-03-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug that caused axis labels
	not to be drawn in 'set view map' mode.

2007-03-13  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/transparent.dem: Add messages to 'pause -1' commands to avoid
	guessing that gnuplot is taking a lot of time to plot while it is just
	waiting for user input.

2007-03-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in:
	* INSTALL:
	Report mouse support in the features section, not as an option of the
	x11 terminal, since it is in fact true for other interactive terminals
	such as wxt or vgagl.

2007-03-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline df_generate_pseudodata df_open df_gets):
	Implement a function-plotting mode that allows 'using' options.
	'+' is a pseudo-file that in 2D plots returns a stream of <samples>
	values corresponding to x coordinates within the current xrange,
	In 3D plots it returns a stream of x and y coordinates on the
	<isosamples> grid.  In either case, additional columns of data can
	be attached the x and y coordinates via a 'using' specification, 
	just as for real data files.

	* demo/4D-data.dem demo/all.dem demo/approximate.dem demo/html/Makefile
	docs/gnuplot.doc:  Demos and documentation.

2007-03-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_init_brush): Cleaner fix for Bug #1673316.
	Consolidate duplicated code surrounding calls to PNG_init_brush() into
	a single copy in the subroutine itself.

2007-03-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_init_brush): Flag initial color as invalid. The first
	time the brush is used, it will be synced to the current palette color.
	Bug #1673316 

2007-03-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars):  For candlesticks whose width is equal
	to a small even number of pixels, the central vertical bar is displaced